[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "my-package"
version = "0.1.0"
description = "My awesome package"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Dexter Shepherd"}
]
dependencies = [
    "numpy>=2.0",
    "torch>=2.7",
    "opencv-python>=4.10",
    "mujoco"

]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]